--- a/chef/chef.yml
+++ b/chef/chef.yml
@@ -25,7 +25,7 @@ deployers:
       - {type: 'dl', uri: 'https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/5.8.1/php_pdo_sqlsrv-5.8.1-7.4-nts-vc15-x64.zip', maps: {'php_pdo_sqlsrv.dll': 'php/ext/php_pdo_sqlsrv.dll'}}
       - {type: 'dl', uri: 'http://windows.php.net/downloads/pecl/releases/wincache/2.0.0.8/php_wincache-2.0.0.8-7.1-nts-vc14-x64.zip', maps: {'php_wincache.dll': 'php/ext/php_wincache.dll'}}
       - {type: 'dl', uri: 'file://phpbin/php_wincache.zip', maps: {'php_wincache.dll': 'php/ext/php_wincache.dll'}}
-      - {type: 'dl', uri: 'file://phpbin/php_blackfire.zip', maps: {'php_wincache.dll': 'php/ext/php_blackfire.dll'}}
+      - {type: 'dl', uri: 'file://phpbin/php_blackfire.zip', maps: {'php_blackfire.dll': 'php/ext/php_blackfire.dll'}}
  # CERTIFICATES
       - {type: 'dl', uri: 'http://curl.haxx.se/ca/cacert.pem', maps: {'cacert.pem': '/cacert.pem'}}
       - {type: 'file', 'action':'copy', 'source':'php/php.ini-production', 'destination':'php/php.ini'}
