--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,30 @@
 {
-    "name": "drupal/sqlsrv",
-    "description": "Driver for SQL Server and SQL Azure",
-    "type": "drupal-module",
-    "minimum-stability": "stable",
-    "require": {
-        "php" : "^7.0"
+  "name": "drupal/sqlsrv",
+  "description": "Driver for SQL Server and SQL Azure",
+  "type": "drupal-module",
+  "minimum-stability": "stable",
+  "authors": [
+    {
+      "name": "Kevin Nowaczyk",
+      "homepage": "https://github.com/Beakerboy"
+    },
+    {
+      "name": "David Garcia",
     }
+  ],
+  "autoload": {
+    "psr-4": { "Drupal\\Driver\\Database\\sqlsrv\\": "drivers/lib/Drupal/Driver/Database/sqlsrv" }
+  },
+  "autoload-dev": {
+    "psr-4": { "Drupal\\Tests\\sqlsrv\\": "tests/src/" }
+  },
+  "require": {
+    "php" : "^7.1",
+    "drupal/core" : "^8.8"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7",
+    "phpstan/phpstan": "*",
+    "php-coveralls/php-coveralls": "*"
+  }
 }
