--- a/appveyor.yml
+++ b/appveyor.yml
@@ -109,10 +109,21 @@ test_script:
   - cmd: cd /d C:\projects\drupal-project
   - cmd: mkdir %TestLogDir%\testresults\
   - cmd: echo Tests not run because they need to be updated as they are using deprecated implementations
-  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Unit\OrderByTest 2>&1 > "%TestLogDir%\tests.log"
-  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Unit\SqlsrvConditionTest 2>&1 > "%TestLogDir%\tests.log"
-  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Unit\SqlsrvConnectionTest 2>&1 > "%TestLogDir%\tests.log"
+  - ps: |
+      php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Unit\OrderByTest 2>&1 > "$Env:TestLogDir\tests.log"
+      if ($LASTEXITCODE -ne 0) {
+        throw "($LASTEXITCODE) test failed."
+      }
+      php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Unit\SqlsrvConditionTest 2>&1 > "$Env:TestLogDir\tests.log"
+      if ($LASTEXITCODE -ne 0) {
+        throw "($LASTEXITCODE) test failed."
+      }
+      php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Unit\SqlsrvConnectionTest 2>&1 > "$Env:TestLogDir\tests.log"
+      if ($LASTEXITCODE -ne 0) {
+        throw "($LASTEXITCODE) test failed."
+      }
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\SchemaTest 2>&1 > "%TestLogDir%\tests.log"
+  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\ConnectionTest 2>&1 > "%TestLogDir%\tests.log"
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\SelectTest 2>&1 > "%TestLogDir%\tests.log"
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\AliasTest 2>&1 > "%TestLogDir%\tests.log"
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\ConditionTest 2>&1 > "%TestLogDir%\tests.log"
