--- a/appveyor.yml
+++ b/appveyor.yml
@@ -112,17 +112,24 @@ test_script:
   - ps: |
       php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Unit\OrderByTest 2>&1 > "$Env:TestLogDir\tests.log"
       if ($LASTEXITCODE -ne 0) {
-        throw "($LASTEXITCODE) test failed."
+        echo "($LASTEXITCODE) test failed."
       }
       php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Unit\SqlsrvConditionTest 2>&1 > "$Env:TestLogDir\tests.log"
       if ($LASTEXITCODE -ne 0) {
-        throw "($LASTEXITCODE) test failed."
+        echo "($LASTEXITCODE) test failed."
       }
       php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Unit\SqlsrvConnectionTest 2>&1 > "$Env:TestLogDir\tests.log"
       if ($LASTEXITCODE -ne 0) {
-        throw "($LASTEXITCODE) test failed."
+        echo "($LASTEXITCODE) test failed."
       }
-  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\SchemaTest 2>&1 > "%TestLogDir%\tests.log"
+      php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Kernel\SchemaTest 2>&1 > "$Env:TestLogDir\tests.log"
+      if ($LASTEXITCODE -ne 0) {
+        echo "($LASTEXITCODE) test failed."
+      }
+      php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Kernel\SchemaTestExtended 2>&1 > "$Env:TestLogDir\tests.log"
+      if ($LASTEXITCODE -ne 0) {
+        echo "($LASTEXITCODE) test failed."
+      }
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\ConnectionTest 2>&1 > "%TestLogDir%\tests.log"
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\SelectTest 2>&1 > "%TestLogDir%\tests.log"
   - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml %TestLogDir%\testresults\ "Common" --class Drupal\Tests\sqlsrv\Kernel\AliasTest 2>&1 > "%TestLogDir%\tests.log"
