--- a/appveyor.yml
+++ b/appveyor.yml
@@ -127,7 +127,7 @@ test_script:
       php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Kernel\SqlsrvTest
       php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" "Common" --class Drupal\Tests\sqlsrv\Kernel\UpdateTest
       Stop-Transcript
-      Get-ChildItem "C:\Users\gerhardl\Documents\My Received Files" -Filter *.log | 
+      Get-ChildItem "$Env:TestLogDir\testresults\" -Filter *.xml | 
       Foreach-Object {
         $wc = New-Object 'System.Net.WebClient'
         $wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", $_.FullName);
