--- a/appveyor.yml
+++ b/appveyor.yml
@@ -139,9 +139,9 @@ test_script:
   - ps: |
       Start-Transcript "$Env:TestLogDir\tests.log"
       $ErrorActionPreference = 'SilentlyContinue'
-      php web/core/scripts/run-tests.sh --php php --url "http://sqlsrv.drupal.org/" --concurrency 4 --xml "$Env:TestLogDir\testresults\" sqlsrv 2>&1 > null
-      php web/core/scripts/run-tests.sh --php php --url "http://sqlsrv.drupal.org/" --concurrency 4 --xml "$Env:TestLogDir\testresults\" Database 2>&1 > null
-      php web/core/scripts/run-tests.sh --php php --url "http://sqlsrv.drupal.org/" --concurrency 4 --xml "$Env:TestLogDir\testresults\" Entity 2>&1 > null
+      php web/core/scripts/run-tests.sh --php php --non-html --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" sqlsrv 2>&1 > null
+      php web/core/scripts/run-tests.sh --php php --non-html --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" Database 2>&1 > null
+      php web/core/scripts/run-tests.sh --php php --non-html --url "http://sqlsrv.drupal.org/" --xml "$Env:TestLogDir\testresults\" Entity 2>&1 > null
       Stop-Transcript
   # After tests, try istalling all core modules\contrib\sqlsrv  - cmd: drupal module:install simpletest
 on_finish:
